--- a/add_notulen.html
+++ b/add_notulen.html
@@ -68,7 +68,9 @@
                   <li><a href="show_user.html"><i class="fa fa-user"></i> Manajemen User </a></li>
                   <li><a href="show_pertemuan.html"><i class="fa fa-table"></i> Manajemen Pertemuan </a></li>
                   <li><a href="#"><i class="fa fa-dollar"></i> Manajemen KAS </a></li>
-                  <li><a href="#"><i class="fa fa-dollar"></i> Manajemen Cash Flow </a></li>
+                  <li><a href="show_cash_flow.html"><i class="fa fa-dollar"></i> Manajemen Cash Flow </a></li>
+                  <li><a href="check_kehadiran.html"><i class="fa fa-check-square-o"></i> Check Kehadiran </a></li>
+                  <li><a href="check_iuran.html"><i class="fa fa-check-square-o"></i> Check Iuran </a></li>
                 </ul>
               </div>
 
