--- a/check_iuran-II.html
+++ b/check_iuran-II.html
@@ -69,10 +69,8 @@
                   <li><a href="show_pertemuan.html"><i class="fa fa-table"></i> Manajemen Pertemuan </a></li>
                   <li><a href="#"><i class="fa fa-dollar"></i> Manajemen KAS </a></li>
                   <li><a href="show_cash_flow.html"><i class="fa fa-dollar"></i> Manajemen Cash Flow </a></li>
-                  <li><a href="check_kehadiran-I.html"><i class="fa fa-check-square-o"></i> Check Kehadiran I </a></li>
-                  <li><a href="check_kehadiran-II.html"><i class="fa fa-check-square-o"></i> Check Kehadiran II </a></li>
-                  <li><a href="check_iuran-I.html"><i class="fa fa-check-square-o"></i> Check Iuran I </a></li>
-                  <li><a href="check_iuran-II.html"><i class="fa fa-check-square-o"></i> Check Iuran II </a></li>
+                  <li><a href="check_kehadiran.html"><i class="fa fa-check-square-o"></i> Check Kehadiran </a></li>
+                  <li><a href="check_iuran.html"><i class="fa fa-check-square-o"></i> Check Iuran </a></li>
                 </ul>
               </div>
 
@@ -197,51 +195,100 @@
 
         <!-- page content -->
         <div class="right_col" role="main">
-          <!-- top tiles -->
-          <div class="row tile_count">
-            <div class="col-md-3 col-sm-3 col-xs-12 tile_stats_count">
-              <span class="count_top"><i class="fa fa-comments-o"></i> Pertemuan Berikutnya</span>
-              <div class="count">19/08/2019</div>
-              <span class="count_bottom"><i class="fa fa-chevron-circle-right"></i> Tempat <strong>Ketua Humamiku</strong></span>
-            </div>
-            <div class="col-md-3 col-sm-3 col-xs-12 tile_stats_count">
-              <span class="count_top"><i class="fa fa-dollar"></i> Total Iuran</span>
-              <div class="count">Rp 250.000</div>
-              <span class="count_bottom"><i class="fa fa-chevron-circle-right"></i> Dari Pertemuan Sebelumnya</span>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-12 tile_stats_count">
-              <span class="count_top"><i class="fa fa-money"></i> Total KAS</span>
-              <div class="count">Rp 2.500.000</div>
-              <span class="count_bottom"><i class="fa fa-chevron-circle-right"></i> Sampai Saat Ini</span>
-            </div>
-            <div class="col-md-2 col-sm-2 col-xs-12 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i> User Aktif</span>
-              <div class="count">10</div>
-              <span class="count_bottom"><i class="fa fa-chevron-circle-right"></i> Saat Ini</span>
-            </div>
-          </div>
-          <!-- /top tiles -->
+          <div class="">
+            <div class="page-title">
+              <div class="title_left">
+                <h3>Check Iuran <small>HUMAMIKU</small></h3>
+              </div>
 
-          <div class="row">
-            <div class="col-md-6 col-sm-6 col-xs-12">
-              <div class="x_panel">
-                <div class="x_title">
-                  <h2>Rangkuman <strong>Iuran</strong> dari 5 pertemuan terakhir</h2>
-                  <div class="clearfix"></div>
-                </div>
-                <div class="x_content">
-                  <canvas id="lineChart1"></canvas>
+              <div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                  <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search for...">
+                    <span class="input-group-btn">
+                      <button class="btn btn-default" type="button">Go!</button>
+                    </span>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-sm-6 col-xs-12">
-              <div class="x_panel">
-                <div class="x_title">
-                  <h2>Rangkuman <strong>KAS</strong> dari 5 pertemuan terakhir</h2>
-                  <div class="clearfix"></div>
-                </div>
-                <div class="x_content">
-                  <canvas id="lineChart2"></canvas>
+
+            <div class="clearfix"></div>
+
+            <div class="row">
+              <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                  <div class="x_title">
+                    <h2>Iuran :</h2>
+                    <div class="clearfix"></div>
+                  </div>
+                  <div class="x_content">
+                    <div class="col-md-10 col-md-offset-1">
+                    <div class="table-responsive">
+                      <table class="table table-hover">
+                        <thead>
+                          <tr>
+                            <th class="th-table col-md-1">No</th>
+                            <th class="th-table col-md-3">Tanggal</th>
+                            <th class="th-table col-md-3">Tempat</th>
+                            <th class="th-table col-md-3">Iuran</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td scope="row" class="col-md-1">1</td>
+                            <td class="col-md-3">19/10/2019</td>
+                            <td class="col-md-3">Ketua Humamiku</td>
+                            <td class="col-md-3">Rp 5.000</td>
+                          </tr>
+                          <tr>
+                            <td scope="row" class="col-md-1">2</td>
+                            <td class="col-md-3">20/10/2019</td>
+                            <td class="col-md-3">Wakil Ketua Humamiku</td>
+                            <td class="col-md-3">Rp 5.000</td>
+                          </tr>
+                          <tr>
+                            <td scope="row" class="col-md-1">3</td>
+                            <td class="col-md-3">21/10/2019</td>
+                            <td class="col-md-3">Sekretaris Humamiku</td>
+                            <td class="col-md-3">Rp 5.000</td>
+                          </tr>
+                          <tr>
+                            <td scope="row" class="col-md-1">4</td>
+                            <td class="col-md-3">22/10/2019</td>
+                            <td class="col-md-3">Bendahara Humamiku</td>
+                            <td class="col-md-3">Rp 5.000</td>
+                          </tr>
+                          <tr>
+                            <td scope="row" class="col-md-1">5</td>
+                            <td class="col-md-3">23/10/2019</td>
+                            <td class="col-md-3">Seksi Humamiku</td>
+                            <td class="col-md-3">Rp 5.000</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-6 col-md-6 col-sm-6">
+                        <div>Showing 1 to 10 of 57 entries</div>
+                      </div>
+                      <div class="col-lg-6 col-md-6 col-sm-6">
+                        <div style="margin-top: -25px; margin-bottom: -15px;" class="dataTables_paginate paging_simple_numbers" id="datatable_paginate">
+                            <ul class="pagination">
+                              <li class="paginate_button previous disabled" id="datatable_previous"><a href="#" aria-controls="datatable" data-dt-idx="0" tabindex="0">Previous</a></li>
+                              <li class="paginate_button active"><a href="#" aria-controls="datatable" data-dt-idx="1" tabindex="0">1</a></li>
+                              <li class="paginate_button "><a href="#" aria-controls="datatable" data-dt-idx="2" tabindex="0">2</a></li>
+                              <li class="paginate_button "><a href="#" aria-controls="datatable" data-dt-idx="3" tabindex="0">3</a></li>
+                              <li class="paginate_button "><a href="#" aria-controls="datatable" data-dt-idx="4" tabindex="0">4</a></li>
+                              <li class="paginate_button "><a href="#" aria-controls="datatable" data-dt-idx="5" tabindex="0">5</a></li>
+                              <li class="paginate_button "><a href="#" aria-controls="datatable" data-dt-idx="6" tabindex="0">6</a></li>
+                              <li class="paginate_button next" id="datatable_next"><a href="#" aria-controls="datatable" data-dt-idx="7" tabindex="0">Next</a></li>
+                            </ul>
+                          </div>
+                      </div>
+                    </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -259,6 +306,15 @@
         <!-- /footer content -->
       </div>
     </div>
+    
+    <script>
+      $(document).ready(function () {
+      $('#dtHorizontalExample').DataTable({
+      "scrollX": true
+      });
+      $('.dataTables_length').addClass('bs-select');
+      });
+    </script>
 
     <!-- jQuery -->
     <script src="dashboard/vendors/jquery/dist/jquery.min.js"></script>
@@ -300,83 +356,6 @@
 
     <!-- Custom Theme Scripts -->
     <script src="dashboard/js/custom.min.js"></script>
-	   
-    <script>
-      var ctx1 = document.getElementById("lineChart1");
-      var myChart1 = new Chart(ctx1, {
-        type: 'line',
-        data: {
-          labels: ["19/10/2019", "20/10/2019", "21/10/2019", "22/10/2019", "23/10/2019"],
-          datasets: [{
-            label: "Total Iuran",
-            fill: false,
-            lineTension: 0.1,
-            backgroundColor: "rgba(75,192,192,0.4)",
-            borderColor: "rgba(75,192,192,1)",
-            borderCapStyle: 'butt',
-            borderDash: [],
-            borderDashOffset: 0.0,
-            borderJoinStyle: 'miter',
-            pointBorderColor: "rgba(75,192,192,1)",
-            pointBackgroundColor: "#fff",
-            pointBorderWidth: 1,
-            pointHoverRadius: 5,
-            pointHoverBackgroundColor: "rgba(75,192,192,1)",
-            pointHoverBorderColor: "rgba(220,220,220,1)",
-            pointHoverBorderWidth: 2,
-            pointRadius: 1,
-            pointHitRadius: 10,
-            data: [200000, 210000, 180000, 200000, 250000],
-          }]
-        },
-        options: {
-          scales: {
-            yAxes: [{
-              ticks: {
-                beginAtZero:true
-              }
-            }]
-          }
-        }
-      });
-
-      var ctx2 = document.getElementById("lineChart2");
-      var myChart2 = new Chart(ctx2, {
-        type: 'line',
-        data: {
-          labels: ["19/10/2019", "20/10/2019", "21/10/2019", "22/10/2019", "23/10/2019"],
-          datasets: [{
-            label: "Total KAS",
-            fill: false,
-            lineTension: 0.1,
-            backgroundColor: "rgba(75,192,192,0.4)",
-            borderColor: "rgba(0,255,0,1)",
-            borderCapStyle: 'butt',
-            borderDash: [],
-            borderDashOffset: 0.0,
-            borderJoinStyle: 'miter',
-            pointBorderColor: "rgba(0,255,0,1)",
-            pointBackgroundColor: "#fff",
-            pointBorderWidth: 1,
-            pointHoverRadius: 5,
-            pointHoverBackgroundColor: "rgba(0,255,0,1)",
-            pointHoverBorderColor: "rgba(220,220,220,1)",
-            pointHoverBorderWidth: 2,
-            pointRadius: 1,
-            pointHitRadius: 10,
-            data: [200000, 210000, 180000, 200000, 250000],
-          }]
-        },
-        options: {
-          scales: {
-            yAxes: [{
-              ticks: {
-                beginAtZero:true
-              }
-            }]
-          }
-        }
-      });
-    </script>
+	
   </body>
 </html>
