--- a/show_cash_flow.html
+++ b/show_cash_flow.html
@@ -198,7 +198,7 @@
           <div class="">
             <div class="page-title">
               <div class="title_left">
-                <h3>Manajemen Pertemuan <small>HUMAMIKU</small></h3>
+                <h3>Manajemen Cash Flow <small>HUMAMIKU</small></h3>
               </div>
 
               <div class="title_right">
@@ -224,72 +224,48 @@
                       <div class="col-lg-6 col-md-6 col-sm-6">
                         <a href="add_cash_flow.html" type="button" class="btn btn-round btn-success btn-sm"><i class="fa fa-plus"></i> Tambah Cash Flow</a>
                       </div>
-                      <div class="col-lg-6 col-md-6 col-sm-6">
-                        <div class="show-table">
-                          <label style="float: right;">
-                            Show
-                            <select id="heard" class="form-control entries" required>
-                              <option value="10">10</option>
-                              <option value="20">20</option>
-                              <option value="30">30</option>
-                              <option value="40">40</option>
-                            </select>
-                             entries
-                          </label>
-                        </div>
-                      </div>
                     </div>
                     <div class="clearfix"></div>
                   </div>
                   <div class="x_content">
-                    <!-- <table class="table table-hover">
-                      <thead>
-                        <tr>
-                          <th class="th-table">No</th>
-                          <th class="th-table">Tempat</th>
-                          <th class="th-table">Tanggal</th>
-                          <th class="th-table">Total Iuran</th>
-                          <th class="th-table">Action</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <th scope="row" class="col-md-1">1</th>
-                          <td>Tempat 1</td>
-                          <td>Tanggal 1</td>
-                          <td>Rp 2000</td>
-                          <td class="col-md-3">
-                            <a href="view_pertemuan.html" type="button" class="btn btn-round btn-success btn-sm"><i class="fa fa-eye"></i> View</a>
-                            <a href="edit_user.html" type="button" class="btn btn-round btn-info btn-sm"><i class="fa fa-edit"></i> Edit</a>
-                            <a href="#" type="button" class="btn btn-round btn-danger btn-sm"><i class="fa fa-trash"></i> Delete</a>
-                          </td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="col-md-1">2</th>
-                          <td>Tempat 2</td>
-                          <td>Tanggal 2</td>
-                          <td>Rp 4000</td>
-                          <td class="col-md-3">
-                            <a href="view_pertemuan.html" type="button" class="btn btn-round btn-success btn-sm"><i class="fa fa-eye"></i> View</a>
-                            <a href="#" type="button" class="btn btn-round btn-info btn-sm"><i class="fa fa-edit"></i> Edit</a>
-                            <a href="#" type="button" class="btn btn-round btn-danger btn-sm"><i class="fa fa-trash"></i> Delete</a>
-                          </td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="col-md-1">3</th>
-                          <td>Tempat 3</td>
-                          <td>Tanggal 3</td>
-                          <td>Rp 5000</td>
-                          <td class="col-md-3">
-                            <a href="view_pertemuan.html" type="button" class="btn btn-round btn-success btn-sm"><i class="fa fa-eye"></i> View</a>
-                            <a href="#" type="button" class="btn btn-round btn-info btn-sm"><i class="fa fa-edit"></i> Edit</a>
-                            <a href="#" type="button" class="btn btn-round btn-danger btn-sm"><i class="fa fa-trash"></i> Delete</a>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-
-                    <div class="row">
+                    <div class="table-responsive">
+                      <table class="table table-hover">
+                        <thead>
+                          <tr>
+                            <th class="th-table">No</th>
+                            <th class="th-table">Tanggal</th>
+                            <th class="th-table">Keterangan</th>
+                            <th class="th-table">Kredit</th>
+                            <th class="th-table">Debit</th>
+                            <th class="th-table">Saldo</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td scope="row" class="col-md-1">1</td>
+                            <td>19/10/2019</td>
+                            <td>Untuk Sesuatu</td>
+                            <td>Rp 5000</td>
+                            <td>-</td>
+                            <td>-</td>
+                          </tr>
+                          <tr>
+                            <td scope="row" class="col-md-1">2</td>
+                            <td>19/10/2019</td>
+                            <td>Untuk Sesuatu</td>
+                            <td>Rp 5000</td>
+                            <td>-</td>
+                            <td>Rp 300000</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-md-12 col-sm-12 col-xs-12 text-right">
+                        <a href="show_pertemuan.html" type="button" class="btn btn-round btn-info btn-sm"><i class="fa fa-download"></i> Lihat Selengkapnya</a>
+                      </div>
+                    </div>
+                    <!-- <div class="row">
                       <div class="col-lg-6 col-md-6 col-sm-6">
                         <div>Showing 1 to 10 of 57 entries</div>
                       </div>
